@@ -32,6 +32,21 @@ typename Rcpp::traits::storage_type<RTYPE>::type* r_vector_start(SEXP x) {
     return reinterpret_cast<pointer>(dataptr(x));
 }
 
+// add specializations to avoid use of dataptr
+#define RCPP_VECTOR_START_IMPL(__RTYPE__, __ACCESSOR__)                                              \
+    template <>                                                                                      \
+    inline typename Rcpp::traits::storage_type<__RTYPE__>::type* r_vector_start<__RTYPE__>(SEXP x) { \
+        return __ACCESSOR__(x);                                                                      \
+    }
+
+RCPP_VECTOR_START_IMPL(LGLSXP,  LOGICAL);
+RCPP_VECTOR_START_IMPL(INTSXP,  INTEGER);
+RCPP_VECTOR_START_IMPL(RAWSXP,  RAW);
+RCPP_VECTOR_START_IMPL(CPLXSXP, COMPLEX);
+RCPP_VECTOR_START_IMPL(REALSXP, REAL);
+
+#undef RCPP_VECTOR_START_IMPL
+
 /**
  * The value 0 statically casted to the appropriate type for
  * the given SEXP type
